# sample-elasticbeanstalk

./: Dockerfile.deploy  Dockerrun.aws.json.template  LICENSE  README.md  bucket-policy.json  circle.yml  deploy.sh  sample-elasticbeanstalk.cabal  setup.sh
src/: Main.hs
test/: Main.hs
