name:                sample-elasticbeanstalk
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/folsen/sample-elasticbeanstalk#readme
license:             MIT
license-file:        LICENSE
author:              Fredrik
maintainer:          fredrik@dekompile.com
copyright:           MIT
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable sample-elasticbeanstalk
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , http-types
                     , wai
                     , warp
